* panos-xml-issue-detector | add validation/fix for duplicate sec/nat rule names
* class-PH/-PanAPIConnector | introduce new argument shadow-ApiKeynoSave - which do not save the API key in the User Home file .panconfkeystore
* class-EthernetIfStore/-EthernetInterface | introduce function addSubintefaceToStore( $subinterface )
* class-SecurityRule | implement scheduler

UTILS:
service-merger: extend location=any - especially for Panorama DG to merge all DG objects with one single script run - also possible with argument allowmergingwithupperlevel
service-merger: change default DupAlgorithm from sameport (which focus only on Dst port) to sameDstSrcport
address-/service-merger:  extend location=any to run successful against firewall with vsys/multi-vsys
addressgroup-/servicegroup-merger: introduce location=any for Panorama DG and Firewall vsys
rule-edit: introduce 'filter=( schedule is [scheduler-name] )'
rule-edit: introduce actions=schedule-set:[schedule-name]
service-edit | actions=move - extend output if firewall is multivsys

BUGFIX:
- fix for pa_rule-edit 'filter=(rule is.unused.fast)' for PAN-OS version detection if connection is going through Panorama
- fix for pa_rule-merge if NEGATION of original Rule and RuleToCompare differ
- fix for different classes are made
- fix class-NatRule | rewriteSNAT_XML() revert new introduced bug
- fix service-merger | fix  algorithm=SameDstSrcPorts for single FW vsys
- fix address-/service-merger | fix location=any - add also shared
- fix trait-ObjectWithDescription | fix setDescription for UTF8 encode


------------------------------------------------------------------------------------------------------------------------

1.5.15 (20180611)
* introduce release 1.5.15
* update predefined.xml to 8041-4843
* introduce class-VirtualWire
* introduce class-TemplateStack
* update predefined.xml to 8043-4857
* class-EthernetInterface/-EthernetIfStore - extend with new Interface types