@@ -12,6 +12,7 @@ GENERAL:
 * class-PH/-PanAPIConnector | introduce new argument shadow-ApiKeynoSave - which do not save the API key in the User Home file .panconfkeystore
 * class-EthernetIfStore/-EthernetInterface | introduce function addSubintefaceToStore( $subinterface )
 * class-SecurityRule | implement scheduler
+* class-EthernetInterface/-StaticRouter/-VirtualRouter/ utils interface - add support for IPv6 Addresses
 
 UTILS:
 service-merger: extend location=any - especially for Panorama DG to merge all DG objects with one single script run - also possible with argument allowmergingwithupperlevel
